tests/src/frontend/typechecking/invalid/type_alias_generic_6.sk
class MyMap<+K: Orderable, +V>(K, V)
type MM<V> = MyMap<V>;
